--- a/client/src/styles/_settings.scss
+++ b/client/src/styles/_settings.scss
@@ -97,3 +97,10 @@ body {
   color: green;
   font-weight: bold;
 }
+
+h1{
+  font-size: 1.5rem;
+  padding: 0.7em 0 0.7em 0.25em;
+  margin : unset;
+  line-height: 0;
+}
