--- a/client/src/styles/components/_navbar.scss
+++ b/client/src/styles/components/_navbar.scss
@@ -62,8 +62,9 @@ nav {
           display: none;
         }
         
-        h5 {
+        span {
           font-family: $font-3;
+          font-weight: bold;
         }
       }
       
