--- a/client/src/styles/pages/_profil.scss
+++ b/client/src/styles/pages/_profil.scss
@@ -2,6 +2,10 @@
   margin: 80px auto 0;
   max-width: 1200px;
 
+  h2{
+    text-align: center;
+  }
+
   .icons {
     top: 55px;
   }
@@ -122,10 +126,12 @@
     }
   }
   .update-container {
-    display: grid;
-    grid-template-columns: 50% 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
     @media screen and(max-width: 700px) {
+      display: grid;
       grid-template-columns: 1fr;
     }
 
@@ -141,6 +147,11 @@
     }
     .left-part {
       text-align: center;
+      width: 50%;
+
+      @media screen and(max-width: 700px) {
+        width: unset;
+      }
 
       h3 {
         margin-bottom: 12px;
@@ -199,6 +210,12 @@
     .right-part {
       text-align: center;
       padding: 20px 40px;
+      width: 50%;
+
+      @media screen and(max-width: 700px) {
+        width: unset;
+      }
+
       h3 {
         margin-bottom: 12px;
       }
