--- a/client/src/styles/pages/_profil.scss
+++ b/client/src/styles/pages/_profil.scss
@@ -173,7 +173,7 @@
           transform: translate(-50%, -50%);
           width: 270px;
           background: $color-3;
-          color: $color-2;
+          color: $white;
           border-radius: 20px;
           display: inline-block;
           padding: 9px 0;
