--- a/client/src/styles/pages/_home.scss
+++ b/client/src/styles/pages/_home.scss
@@ -39,10 +39,12 @@
             margin: 0 8px;
           }
           .active-btn {
-            background: $color-1;
+            background: $color-3;
+            color: $white;
   
             &:hover {
               background: $color-2;
+              color: $black;
             }
           }
           li:not(.active-btn) {
