--- a/client/src/styles/components/_newPostForm.scss
+++ b/client/src/styles/components/_newPostForm.scss
@@ -31,7 +31,7 @@
   .user-info {
     margin-bottom: 10px;
     img {
-      border-radius: 20px;
+      border-radius: 30px;
       height: 60px;
       width: 60px;
       box-shadow: 2px 2px 2px rgba(51, 51, 51, 0.16);
@@ -52,6 +52,10 @@
       padding: 12px 15px;
       border-radius: 20px 20px 6px 20px;
     }
+    label{
+      position:absolute; left:-999px
+    }
+
     .card-container {
       background: $white;
       border-radius: 20px 20px 6px 20px;
